tests/snapshots/snapshot_tests__snapshot_event_tool_result_success.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "tool_result",
  "tool_name": "read_file",
  "tool_use_id": "tu_001",
  "output": {
    "content": "fn main() {}"
  },
  "is_error": false
}
