tests/snapshots/snapshot_tests__snapshot_event_with_ext.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "assistant_message",
  "text": "passthrough",
  "ext": {
    "raw_message": {
      "vendor": "data"
    }
  }
}
