tests/snapshots/snapshot_tests__snapshot_execution_lane_workspace_first.snap
---
source: tests/snapshot_tests.rs
expression: "ExecutionLane::WorkspaceFirst"
---
"workspace_first"
