tests/snapshots/snapshot_tests__snapshot_ir_content_block_image.snap
---
source: tests/snapshot_tests.rs
expression: block
---
{
  "type": "image",
  "media_type": "image/png",
  "data": "iVBORw0KGgo="
}
