tests/snapshots/snapshot_tests__snapshot_ir_content_block_text.snap
---
source: tests/snapshot_tests.rs
expression: block
---
{
  "type": "text",
  "text": "plain text"
}
