tests/snapshots/snapshot_tests__snapshot_ir_content_block_thinking.snap
---
source: tests/snapshot_tests.rs
expression: block
---
{
  "type": "thinking",
  "text": "Let me reason step by step..."
}
