tests/snapshots/snapshot_tests__snapshot_ir_content_block_tool_result.snap
---
source: tests/snapshot_tests.rs
expression: block
---
{
  "type": "tool_result",
  "tool_use_id": "tu_200",
  "content": [
    {
      "type": "text",
      "text": "fn main() {}"
    }
  ],
  "is_error": false
}
