tests/snapshots/snapshot_tests__snapshot_ir_content_block_tool_result_error.snap
---
source: tests/snapshot_tests.rs
expression: block
---
{
  "type": "tool_result",
  "tool_use_id": "tu_201",
  "content": [
    {
      "type": "text",
      "text": "permission denied"
    }
  ],
  "is_error": true
}
