tests/snapshots/snapshot_tests__snapshot_ir_content_block_tool_use.snap
---
source: tests/snapshot_tests.rs
expression: block
---
{
  "type": "tool_use",
  "id": "tu_200",
  "name": "read_file",
  "input": {
    "path": "src/main.rs"
  }
}
