tests/snapshots/snapshot_tests__snapshot_ir_conversation_simple.snap
---
source: tests/snapshot_tests.rs
expression: conv
---
{
  "messages": [
    {
      "role": "system",
      "content": [
        {
          "type": "text",
          "text": "You are helpful."
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Hi"
        }
      ]
    },
    {
      "role": "assistant",
      "content": [
        {
          "type": "text",
          "text": "Hello!"
        }
      ]
    }
  ]
}
