tests/snapshots/snapshot_tests__snapshot_ir_conversation_with_tool_use.snap
---
source: tests/snapshot_tests.rs
expression: conv
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Read my file"
        }
      ]
    },
    {
      "role": "assistant",
      "content": [
        {
          "type": "tool_use",
          "id": "tu_300",
          "name": "read_file",
          "input": {
            "path": "test.rs"
          }
        }
      ]
    },
    {
      "role": "tool",
      "content": [
        {
          "type": "tool_result",
          "tool_use_id": "tu_300",
          "content": [
            {
              "type": "text",
              "text": "file content"
            }
          ],
          "is_error": false
        }
      ]
    },
    {
      "role": "assistant",
      "content": [
        {
          "type": "text",
          "text": "Here is the content."
        }
      ]
    }
  ]
}
